--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="images/20220428_230941.jpg" alt="Vansh's profile picture" width="300" height="300"></td>
+            <td><img src="images\lHjNxWdd.jpg" alt="Vansh's profile picture" width="300" height="300"></td>
             <td><h1>Vansh Setia</h1>
                 <p><em>Student of <strong>Chandigarh University</strong></em></p>
                 <p>I am 2nd Yr BCA student. I love Coffee with Cappuccino. </p></td>
